thetech.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: ihos-pod
  name: ihos-pod
spec:
  containers:
  - image: ihoslav/thetech-image:v1
    name: ihos-pod
    ports:
      - containerPort: 3000
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
