ihos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ihos-svc
  labels:
     app: thetech-app
spec:
  type: NodePort
  ports:
    - targetPort: 3000
      port: 80
      nodePort: 30005
  selector:
    app: thetech-app
